# obelisk

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: AGENT_INTEGRATIONS.md  COMMANDS.md  README.md  SELF_IMPROVEMENT.md  SETUP.md  TROUBLESHOOTING.md
integrations/hermes/obelisk-rewrite/: __init__.py  plugin.yaml
integrations/opencode/: obelisk.ts
plugins/: README.md
plugins/claude-code-obelisk/: README.md
plugins/claude-code-obelisk/.claude-plugin/: plugin.json
plugins/claude-code-obelisk/agents/: context-optimizer.md
plugins/claude-code-obelisk/hooks/: hooks.json
plugins/claude-code-obelisk/skills/compact-output/: SKILL.md
plugins/hermes-obelisk/: README.md  __init__.py  hermes_hook_bridge.py  hermes_session.py  hermes_state.py  measure-path  plugin.yaml  runtime_env.py  schemas.py  tools.py  utf8_io.py
plugins/hermes-obelisk/skills/: compact-output.md  inspect-symbol.md  pack-context.md  restore-context.md
plugins/openclaw-obelisk/: .npmignore  .prettierignore  CHANGELOG.md  NOTES.md  PR_BODY.md  PR_NOTES.md  README.extra.md  README.final.md  README.local.md  README.md  README.pr.md  SECURITY.md  TODO.md  VALIDATION.md  openclaw.plugin.json  package.json
plugins/openclaw-obelisk/src/: index.ts  obelisk.ts
plugins/paperclip-obelisk/: README.md  package.json  tsconfig.json
plugins/paperclip-obelisk/src/: manifest.ts  obelisk.ts  tools.ts  worker.ts
scripts/: self-improve.sh
src/: dashboard.rs  engine.rs  filters.rs  hook.rs  install.rs  learn.rs  ledger.rs  main.rs  marker.rs  pack.rs  proxy.rs  squeeze.rs  symbols.rs  terse.rs
(+4 files in other folders)
