[package]
name = "obelisk"
version = "1.0.0"
edition = "2021"
description = "Obelisk — a token-optimizing engine for AI coding agents"
license = "MIT"

[[bin]]
name = "obelisk"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
regex = "1"
lazy_static = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
ureq = "2"
colored = "2"
dirs = "5"

[profile.release]
opt-level = 3
lto = true
strip = true
